# fcgi

./: .gitattributes  .gitignore  CHANGES.md  CMakeLists.txt  Doxyfile  README.md  TODO.md
cmake/: dmitigr_cefeika.cmake  dmitigr_fcgi.cmake  dmitigr_math.cmake  dmitigr_rnd.cmake
doc/: overview.class.violet.html
doc/fcgi/: README.md  dmitigr_fcgi_overview.violet.html
lib/dmitigr/: fcgi.cpp  fcgi.hpp  math.cpp  math.hpp
lib/dmitigr/fcgi/: CMakeLists.txt  basics.cpp  basics.hpp  connection.hpp  dll.hpp  fcgi.hpp  implementation_footer.hpp  implementation_header.hpp  listener.cpp  listener.hpp  listener_options.cpp  listener_options.hpp  server_connection.cpp  server_connection.hpp  streambuf.cpp  streambuf.hpp  streams.cpp  streams.hpp  types_fwd.hpp  version.hpp  version.rc
lib/dmitigr/fcgi/test/: fcgi-hello.cpp
lib/dmitigr/math/: CMakeLists.txt  math.hpp  types_fwd.hpp  version.hpp
lib/dmitigr/misc/: CMakeLists.txt
src/fcgi/: basics.cpp  basics.hpp  connection.hpp  dll.hpp  exceptions.hpp  fcgi.cpp  fcgi.hpp  lib_version.cpp  lib_version.hpp  listener.cpp  listener.hpp  listener_options.cpp  listener_options.hpp  server_connection.cpp  server_connection.hpp  server_connection_stacked.cpp  streambuf.cpp  streambuf.hpp  streams.cpp  streams.hpp  types_fwd.hpp  version.hpp  version.rc
src/math/: alignment.hpp  exceptions.hpp  interval.hpp  math.hpp  statistic.hpp  version.hpp
src/rnd/: exceptions.hpp  number.hpp  rnd.hpp  string.hpp  uuid.hpp  version.hpp
test/fcgi/: CMakeLists.txt  fcgi-hello.cpp  fcgi-hellomt.cpp  fcgi-largesend.cpp  fcgi-overload.cpp
test/math/: CMakeLists.txt  math-unit-func.cpp  math-unit-interval.cpp  math-unit-test.cpp
test/misc/: CMakeLists.txt
test/rnd/: rnd-uuid.cpp
tests/: CMakeLists.txt  hello.cpp  hellomt.cpp  unit.hpp  unit1.cpp
